--- a/style.css
+++ b/style.css
@@ -1,121 +1,150 @@
 
- body{
- 
-  background:linear-gradient( to bottom,#311F43,#013447 50% ,#383353);
-
-  height: 100vh;
-  width: 100%;
-
+*{  
+  margin: 0;
+  padding: 0;
+  color: #ffff;
+  box-sizing: border-box;
 }
 
-
-
-h2{
-
-  font-family: serif ;
-
-color: #ffff;
-font-size: 70px;
-letter-spacing:.7cm;
-font-weight: 5;
-margin-top: 150px;
-margin-bottom: 10px
-;
-
+body{
+  font-family: 'Times New Roman', Times, serif;
 }
 
-.sub-txt {
-letter-spacing: 0.2cm;
-font-size: 12px;
-margin-left: 70px;
-color:#ffff;
-margin-top: 0px;
+.container ul {
+  margin-bottom: 0;
+  
 }
 
-h2{
-margin-left: 50px;
-color: #ffff;
+.text{
 
-}
-
-
-
-
-a {
-color:#ffff;
-margin-bottom: 20px;
-font-family: 'Times New Roman', Times, serif;
-letter-spacing:0.3cm;
-font-size: 12px;
-
+  margin-top: 30%;
 }
 
 .container{
-  display: grid;
-place-items: center end;
- align-items: center;
-height: 100;
-margin: 0;
+  background-repeat:no-repeat;
+  background-image: url('https://images.unsplash.com/photo-1700404243679-dd764b160784?q=80&w=1400&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D') ;
+  min-height:100vh;
+  width:100%;
+  overflow: hidden;
+}
+
+.links{
+
+margin-top: 10%;
+}
+
+h2{
+  font-size: 60px;
+  letter-spacing:.7cm;
+  margin-bottom: .2%;
+  text-align: center;
+}
+
+.sub-txt {
+  letter-spacing: 0.1cm;
+  font-size: 12px;
+  text-align: center;
+  color:#ffff;
 }
 
 li {
   list-style: none;
-  margin-left: -200%;
-margin-bottom: -30%;
-margin-top: -45%;
-}
-
-.abt{
-
- background:linear-gradient(to bottom,#311F43,#013447 50% ,#383353) ;
-height: 300vh;
-width:100%;
-max-width: 1200px;
-max-height:100vh;
-}
-
-#board{
-margin-top: 0 auto;
-height:40%;
-width: 100%;
-object-fit: cover;
-
-}
-
-#about, #prohead, #contact{
-color: #ffff;
   text-align: center;
-  letter-spacing: 0.7cm;
-  font-family: 'Times New Roman', Times, serif;
-  font-size:45px;
-  
+line-height: 2;
+font-size: 20px;
+letter-spacing: .5rem;
+}
+
+a{
+  text-decoration:none;
+}
+
+.about{
+background-color:#1E2B34;
+  height:100vh;
+  width: 100%;
 
 }
 
-#about, #des {
-display: grid;
-place-items: center;
-  color: #ffff;
-  text-align: center;
-}
-
-#code{
-
-height:10%;
-width: 100%;
-object-fit: cover;
-opacity: 50%;
-margin-top: 40px;
-}
-
-#about2{
-color:#ffff;
+h1{
+font-size: 30px;
 text-align: center;
-display: flex;
-justify-content: flex-start;
-height: 100vh;
+letter-spacing: .5rem;
 }
 
 
+
+.aboutTitle{
+padding-top:10%;
+}
+
+
+#des{
+  text-align: center;
+line-height: 1.8;
+margin: 6%;
+}
+
+
+.letsworkbutton{
+  background-color:#99B28A ;
+  padding:2%;
+  border-radius: 20px;
+  border: none;
+  margin: 0;
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  
+ 
+}
+
+.center-button{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+
+.projectheading{
+padding:14%;
+}
+
+
+.projects{
+background-color: #7D8D75;
+min-height:100vh;
+width:100%;
+}
+
+.contact{
+
+background-color:#0F191E ;
+min-height:100vh;
+width:100%;
+text-align: center;
+padding: 20%;
+
+
+
+}
+
+.profiles {
+margin-top: 20%;
+letter-spacing: .1cm;
+
+}
+
+
+
+
+.portfolio-projects{
+display: flex;
+flex-direction: column;
+align-items: center;
+justify-content: center;
+gap: 20px;
+}
 
 
