--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ body{
   min-height:100vh;
   width:100%;
   overflow: hidden;
+  background-size: cover;
 }
 
 .links{
@@ -148,3 +149,26 @@ gap: 20px;
 }
 
 
+
+@media only screen and (min-width: 768px){
+
+.links{
+
+  margin-bottom: 20%;
+}
+
+  .heading{
+    margin-top: -20%;
+  }
+
+
+.about{
+
+padding-left: 20%;
+padding-right:20%;
+
+
+}
+
+
+}
