--- a/style.css
+++ b/style.css
@@ -108,30 +108,34 @@ padding-top:10%;
 }
 
 
+.projectheading{
+padding:6%;
 
+}
 
 .projects{
 background-color: #7D8D75;
-min-height:100vh;
+height:100vh;
 width:100%;
-padding:10%;
 }
 
 
-.portfolio-projects{
-display: grid;
-
-  grid-template-columns: 10rem 10rem;
-  gap:40px;
-
-  background-color: #1E2B34;
+.project-grid{
+  margin-left: 38%;
+  display:grid;
+  grid-auto-rows: 100px 100px;
+  grid-template-columns: 100px 100px;
+  gap:64px;
+  
 }
+
 
 .grid{
-  gap:10px; 
   height: 8rem;
-width:8rem;
-}
+  width:8rem;
+   background-image: url('https://images.unsplash.com/photo-1700404243679-dd764b160784?q=80&w=1400&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D') ;
+  padding:40px;
+  }
 
 
 .contact{
@@ -140,20 +144,26 @@ background-color:#0F191E ;
 min-height:100vh;
 width:100%;
 text-align: center;
-padding: 20%;
+padding: 4%;
 
 
 
 }
 
 .profiles {
-margin-top: 20%;
+margin-top: 8%;
 letter-spacing: .1cm;
 
 }
 
 
+.email{
+background-color: #7D8D75;
+margin-top:4%;
+height:48px;
+width:124px;
 
+}
 
 
 
