--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ z-index: .5;
 
 .about{
 background-color:#0F191E;
-  height:100vh;
+  min-height:100vh;
   width: 100%;
 
 }
@@ -99,8 +99,8 @@ padding-top:10%;
   text-align: center;
   line-height: 3;
   margin: 6%;
-  line-spacing:.5rem;
-  color:#B6B6B6
+  color:#B6B6B6;
+  position: relative;
 }
 
 
@@ -109,7 +109,7 @@ padding-top:10%;
   padding:1%;
   border: none;
   margin: 0;
-  position: absolute;
+  position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -140,29 +140,28 @@ padding:6%;
 
 .projects{
 background-color: #0F191E;
-height:100vh;
+min-height:100vh;
 width:100%;
 }
 
 
-.project-grid{
-  align-items: center;
-  justify-content: center;
-  display:grid;
-  grid-auto-rows: 100px 100px;
-  grid-template-columns: 200px 100px;
-  gap:64px;
-  
+.project-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
+  gap: 32px;
+  justify-items: center;
+  padding: 1rem;
 }
 
 
-.grid  {
+.grid {
+  width: 100%;
+  max-width: 200px;
   height: 8rem;
-  width:12rem;
-  padding:50px;
-  transition: .5s;
-  position:relative;
- overflow: hidden;
+  padding: 1rem;
+  position: relative;
+  overflow: hidden;
+  transition: 0.5s;
 }
 
 .grid a, a  {
