--- a/style.css
+++ b/style.css
@@ -147,78 +147,71 @@ width:100%;
 
 .project-grid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
-  gap: 32px;
+  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+  gap: 40px;
   justify-items: center;
-  padding: 1rem;
+  padding: 4rem;
 }
+
 
 
 .grid {
   width: 100%;
-  max-width: 200px;
-  height: 8rem;
-  padding: 1rem;
+  max-width: 600px;
+  height: 200px;
+
+  background-size: cover;
+  background-position: center;
   position: relative;
   overflow: hidden;
   transition: 0.5s;
+  
 }
 
-.grid a, a  {
+
+
+.thumbnail {
+  position: relative;
+  display: block;
   color: white;
   text-decoration: none;
-
+  width: 100%;
+  height: 100%;
 }
 
-  .hover-text {
-  opacity: 0;
-  transition: opacity 0.3s ease;
+.thumbnail img {
+  width: 100%;
   display: block;
-  text-align: center;
-  font-size: 1.2rem;
-  padding: 10px;
 }
 
-
-.aqua{
-  background-image: url("Images/heroMockup.png");
-background-size: cover;
-background-position: center;
-}
-
-.aqua:hover{
-
-background-color: #99B28A;
-  background-size: cover;
-  background-position: center;
-}
-.Ecom {
-  background-image: url("Images/eComerce.png");
-background-size: cover;
-background-position: center;
-}
-
-.landing{
-  background-image: url("Images/fitneslanding.png");
-background-size: cover;
-background-position: center;
-}
-
-.soon{ 
- background-image: url('https://images.unsplash.com/photo-1700404243679-dd764b160784?q=80&w=1400&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
- background-position: center;
-}
-
-
-.grid:hover {
+.thumbnail:hover:hover {
 transform:scale(1.1) ;
 z-index: .5;
-  background-color: #0F191E;
   background-size: cover;
   background-position: center;
 
 }
 
+.thumbnail:hover .hover-text {
+  opacity: 1;
+}
+
+
+
+.hover-text {
+  position: absolute;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.7);
+  color: #fff;
+  width: 100%;
+  text-align: center;
+  padding: 20px;
+  padding-top: 160px;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+  font-weight: 500;
+  letter-spacing: 0.5px;
+}
 .contact{
 background-color:#0F191E ;
 min-height:100vh;
@@ -230,8 +223,15 @@ padding: 4%;
 .profiles {
 letter-spacing: .1cm;
 transition: .2s;
+background-color: #99B28A;
+padding: 2%;
+
 }
 
+a{
+
+  color:#fff
+}
 
 .social{
 margin-top:12% ;
