--- a/style.css
+++ b/style.css
@@ -455,7 +455,6 @@ gap: 40px;
 display:flex;
 align-items: center;
 justify-content: center;
-overflow-wrap: ;
 }
 
 
@@ -511,9 +510,26 @@ height:40rem;
 
 }
 
-.pic{
-width:20%;
+.dd2{
+gap: none;
 
 }
 
+}
+
+
+@media screen and (max-width:768px) {
+.AquariumBody{
+width:500px;
+
+}
+
+  .pic {
+    width: 30%;         /* or a smaller fixed width like 300px */
+    margin-right: .5rem;  /* reduce gap on small screens */
+  }
+
+.ddt{
+  width: 100%;
+}
 }
